# Saturn

./: .gitignore  .qovery.yml  Dockerfile  LICENSE  README.md  bot.py  docker-compose.debug.yml  docker-compose.yml  pyproject.toml  requirements.txt  saturn.py  utils.py
assets/: __init__.py  cmd.py  constants.py  emb.py  errors.py  menu.py  musicutils.py  paginator.py  profanity.txt  strings.py  time.py  utils.py
cogs/: automod.py  config.py  dev.py  error_handler.py  events.py  fun.py  help.py  manage.py  misc.py  moderation.py  music.py  reactionroles.py  servmanager.py  tags.py  utility.py  utilty.py
