[tool.poetry]
name = "saturn"
version = "0.1.0"
description = "A multipurpose discord bot made in python."
authors = ["SynchronousDev <not_gonna_have@my_email.lol>"] # not my actual email, don't try to contact me
license = "BSD 3-Clause \"New\" or \"Revised\" License"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.6.0"
motor = "^2.3.1"
python-dotenv = "^0.17.0"
pytimeparse = "^1.1.8"
Pillow = "^8.2.0"
pytz = "^2021.1"
python-dateutil = "^2.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
